# python-pract-ns

./: hours_to_percent.py  ollama_postman_examples.json  ollama_voice.py  ollama_voice_pyttsx3.py  terminal_logo.sh  terminal_logo_animated.sh  terminal_logo_matrix.sh  terminal_logo_v2.sh
Python scripts/: dialogflow_test.py  image-classify.py  sal.py  translate.py  untitled0.py
basics_revision/: d1f1.py  json_example.py
db-connectivity/: datab.db  database.db  ex_sqlmodel.py
local_llm/: README.md  pyproject.toml
local_llm/local_llm/: __init__.py  client.py  config.py  exceptions.py  health.py  models.py  setup_models.py
local_llm/local_llm/agent/: __init__.py  agent.py  conversation.py  tool.py
local_llm/scripts/: setup.sh
local_llm/tests/: __init__.py  test_client.py
scrappers/: .env.example  .gitignore  AGENT_SYSTEM_COMPLETE.md  COPART_USAGE.md  MIGRATION_COMPLETE.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  SYSTEM_READY.md  TESTING_COMPLETE.md  VOICE_CHAT_GUIDE.md  VOICE_CHAT_SUMMARY.md  VOICE_SETUP_QUICKSTART.md  main.py  ollama_voice_gtts.py  ov  pyproject.toml  requirements.txt  voice_chat.py
scrappers/cli/: __init__.py  chat.py
scrappers/configs/: copart_schema.txt  sites.yaml
scrappers/core/: __init__.py  base_scraper.py  browser_manager.py  llm_helper.py
scrappers/scrapers/: __init__.py  db_portal_scraper.py
scrappers/scrappers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scrappers/tools/: __init__.py  analyze_data.py  browse_page.py  extract_links.py  fetch_page.py  query_copart.py  web_search.py
(+96 files in other folders)
