[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrappers"
version = "0.2.0"
description = "Web scraping toolkit with agentic AI capabilities"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.16.0",
    "webdriver-manager>=4.0.1",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "pandas>=2.0.0",
    "duckduckgo-search>=4.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
agent-chat = "cli.chat:main"
agent-voice = "voice_chat:main"
ollama-voice = "ollama_voice:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "scrapers*", "tools*", "cli*", "configs*"]
